# ros2_SDL2_audio_frontend

./: .gitignore  README.md  ros2_SDL2_audio_frontend_project_knowledge.md
docs/: index.md  project_knowledge.md  ros2_SDL2_audio_frontend_project_knowledge.md
docs/contributing/: rules.md
docs/usage/: overview.md  usage_with_linux.md
sdl2_audio_frontend/: CMakeLists.txt  package.xml
sdl2_audio_frontend/config/: audio_params.yaml  vad_params.yaml  wake_word_params.yaml
sdl2_audio_frontend/include/sdl2_audio_frontend/audio/: audio_async.hpp
sdl2_audio_frontend/include/sdl2_audio_frontend/nodes/: audio_capture_node.hpp  vad_node.hpp  wake_word_node.hpp
sdl2_audio_frontend/launch/: audio_frontend.launch.py
sdl2_audio_frontend/msg/: AudioData.msg
sdl2_audio_frontend/src/: audio_capture_node.cpp
sdl2_audio_frontend/src/audio/: audio_async.cpp
sdl2_audio_frontend/src/nodes/: audio_capture_node.cpp  audio_playback_node.cpp  vad_node.cpp  wake_word_node.cpp
